# adventofcode2023rust

./: Cargo.toml  README.MD
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day_1_statics.rs  main.rs  runner.rs
