[package]
name = "advent_of_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.2"
time = "0.3.30"
lazy_static = "1.4.0"
regex = { version = "1.10.2", features = [] }
rayon = "1.8.0"

